--- a/workflow/config.yaml
+++ b/workflow/config.yaml
@@ -10,11 +10,23 @@ knowndb:
     dbSNP: "/tier4/DSC/GATK/jgjeong/standardDB/vcfDB/dbsnp_138.hg19.vcf"
 
 
-readingtype: "paired" #paired(default) or single 
+readingtype: "paired" # either paired(default) or single 
+
+
+vartype: "snvs" # either snvs or indels
+
+
+filteroption: "vqsr" # either vqsr, hard, or cnn
 
 
 filtering:
-    vqsr: false
+    vqsr: 
+        resources: # resources path 
+            hapmap: "/tier4/DSC/GATK/ehlim/gatk_germline_pipeline/resources/standardDB/ALL.wgs.phase3_shapeit2_mvncall_integrated_v5b.20130502.sites.vcf"
+            omni: "/tier4/DSC/GATK/ehlim/gatk_germline_pipeline/resources/standardDB/1000G_omni2.5.hg19.sites.vcf" 
+            g1k: "/tier4/DSC/GATK/ehlim/gatk_germline_pipeline/resources/standardDB/1000G_phase1.snps.high_confidence.hg19.sites.vcf"
+            dbsnp: "/tier4/DSC/GATK/ehlim/gatk_germline_pipeline/resources/standardDB/dbsnp_138.hg19.vcf"
+            
     cnn: false
     hard:
         snvs:
@@ -22,7 +34,7 @@ filtering:
         indels:
             "QD < 2.0 || FS > 200.0 || ReadPosRankSum < -20.0"
 
-
+   
 processing:
     remove-duplicates: true
     # Uncomment and point to a bed file with, e.g., captured regions if necessary,
@@ -41,8 +53,12 @@ params:
         GenomicsDBimport: "-merge-input-intervals true"
         BaseRecalibrator: ""
         GenotypeGVCFs: ""
-        VariantRecalibrator: ""
+        VariantRecalibrator:
+                mode: "SNP"
+                annotation: ["QD", "FisherStrand"] # which fields to use with -an
+                extra: ""
         MarkDuplicates: "REMOVE_DUPLICATES false"
+
     trimmomatic:
         trimmer:
             - "LEADING:3"
